# ts_pre_commit_conf

./: .gitignore  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.py
conda/: meta.yaml
develop/: .flake8  .pre-commit-config.yaml  config.yaml
doc/: conf.py  index.rst  manifest.yaml  version_history.rst
doc/lsst.ts.pre.commit.conf/: index.rst
doc/news/: DM-48659.bugfix.rst  DM-48659.feature.rst  DM-48659.perf.rst  DM-50424.feature.rst  DM-50537.bugfix.rst  README.rst
python/lsst/ts/pre/commit/conf/: __init__.py
python/lsst/ts/pre_commit_conf/: __init__.py  constants.py  modify_pyproject.py  pre_commit_conf_generator.py  pre_commit_hooks.py
python/lsst/ts/pre_commit_conf/config_files/: .ruff.toml
python/lsst/ts/pre_commit_conf/templates/: isort-pre-commit-hook-template.yaml  isort-pyproject.toml  mypy-pre-commit-hook-template.yaml  mypy-pyproject.toml  pflake8-pre-commit-hook-template.yaml  pflake8-pyproject.toml  pre-commit-config-template.yaml
tests/: test_pre_commit_conf_generator.py
tests/data/: dot_gitignore_complete  dot_gitignore_without_isort  dot_gitignore_without_isort_and_mypy  pre_commit_conf_complete.yaml  pre_commit_conf_without_isort.yaml  pre_commit_conf_without_mypy.yaml  ts_pre_commit_config_complete.yaml
