[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_pre_commit_conf"
description = "Vera Rubin Observatory Telescope and Site Software Team pre-commit configuration generator."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { repository = "https://github.com/lsst-ts/ts_pre_commit_conf" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
generate_pre_commit_conf = "lsst.ts.pre_commit_conf:generate_pre_commit_conf"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "documenteer[pipelines]",
]
